Dev 11 16 yn modify
* 파일명 수정

* 파일명 수정 및 깃 설정 수정

* 변수명 변경

---------

Co-authored-by: 2Tory <50188172+2Tory@users.noreply.github.com>